cleaning up example code

--- a/tera_fire/main/CMakeLists.txt
+++ b/tera_fire/main/CMakeLists.txt
@@ -1,6 +1,8 @@
 idf_component_register(SRCS "state_core.c"
-                            "net_state.c"
                             "main.c"
                             "file_core.c"
                             "ble_core.c"
+                            "wifi_state.c"
+                            "wifi_core.c"
+                            "net_state.c"
                             INCLUDE_DIRS ".")
