--- a/tera_fire/main/CMakeLists.txt
+++ b/tera_fire/main/CMakeLists.txt
@@ -5,6 +5,7 @@ idf_component_register(SRCS "state_core.c"
                             "wifi_state.c"
                             "wifi_core.c"
                             "net_state.c"
+                            "thermal.c"
                             "packet_core.c"
                             "http_core.c"
                             INCLUDE_DIRS ".")
